--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,28 @@
 }
 
 body {
-  font-family: 'Titillium Web', sans-serif;
   background-color: black;
   color: whitesmoke;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 /*#region Nav Style*/
 nav {
-  padding: 20px;
+  font-family: 'Titillium Web', sans-serif;
+  position: fixed;
+  width: 100%;
+  padding: 20px 10px;
+  display: flex;
+  justify-content: space-between;
+  z-index: 2;
+}
+
+nav h1 {
+  margin-left: 20px;
 }
 
 nav ul {
@@ -22,24 +36,22 @@ nav ul {
 }
 
 ul li {
+  font-family: 'Titillium Web', sans-serif;
   text-align: center;
   cursor: pointer;
   position: relative;
   bottom: 0px;
   margin: 0 30px;
+  align-items: center;
+}
+
+ul li:last-child {
+  margin-right: 50px;
 }
 
 ul li a {
   text-decoration: none;
   color: whitesmoke;
-}
-
-ul li:first-child {
-  margin-left: 20px;
-  text-align: left;
-  justify-content: center;
-  flex: 2;
-  pointer-events: none;
 }
 
 ul li::before {
@@ -61,3 +73,85 @@ ul li:hover::before {
   transform: scaleX(1);
 }
 /*#endregion*/
+
+.mainBody {
+  height: 100vh;
+}
+
+.insideBody {
+  padding: 80px 50px;
+}
+
+#inicio {
+  background: url(./images/mainImg.jpg);
+  background-repeat: no-repeat;
+  background-size: 1366px;
+  object-fit: cover;
+  box-shadow: inset 0 0 10px #000000;
+}
+
+/*#region Carousel*/
+.swiper {
+  width: 100%;
+  height: 100vh;
+}
+
+.swiper-button-prev {
+  color: white;
+}
+
+.swiper-button-next {
+  color: white;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#peças img {
+  filter: blur(1px);
+}
+
+/*#endregion*/
+
+@media only screen and (max-width: 600px) {
+  #inicio {
+    background-position: 40% 0;
+  }
+  nav,
+  nav ul {
+    float: left;
+    position: relative;
+    align-items: center;
+    padding: 10px 0;
+    flex-direction: column;
+    margin: 0;
+  }
+
+  nav ul li {
+    width: 100vw;
+    box-shadow: 0 0 5px #000000;
+    background-color: rgb(0, 0, 0, 0.3);
+    padding: 10px 0;
+  }
+
+  nav h1 {
+    margin: 0;
+  }
+
+  ul li:last-child {
+    margin: 0;
+  }
+}
