--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,26 @@ a {
   text-decoration: none;
   color: inherit;
 }
+a:hover{
+  text-decoration: none;
+  color: inherit;
+}
+
+.mainBody {
+  height: 100vh;
+}
+
+.insideBody {
+  padding: 80px 50px;
+}
+
+#inicio {
+  background: url(./images/mainImg.jpg);
+  background-repeat: no-repeat;
+  background-size: 100vw;
+  object-fit: cover;
+  box-shadow: inset 0 0 10px #000000;
+}
 
 /*#region Nav Style*/
 nav {
@@ -26,7 +46,7 @@ nav {
   z-index: 2;
 }
 
-nav h1 {
+nav h2 {
   margin-left: 20px;
 }
 
@@ -74,22 +94,6 @@ ul li:hover::before {
 }
 /*#endregion*/
 
-.mainBody {
-  height: 100vh;
-}
-
-.insideBody {
-  padding: 80px 50px;
-}
-
-#inicio {
-  background: url(./images/mainImg.jpg);
-  background-repeat: no-repeat;
-  background-size: 1366px;
-  object-fit: cover;
-  box-shadow: inset 0 0 10px #000000;
-}
-
 /*#region Carousel*/
 .swiper {
   width: 100%;
@@ -126,6 +130,7 @@ ul li:hover::before {
 
 /*#endregion*/
 
+/*#region Responsive configs*/
 @media only screen and (max-width: 600px) {
   #inicio {
     background-position: 40% 0;
@@ -147,11 +152,37 @@ ul li:hover::before {
     padding: 10px 0;
   }
 
-  nav h1 {
+  nav h2 {
     margin: 0;
   }
 
   ul li:last-child {
     margin: 0;
   }
+}
+/*#endregion*/
+
+.descricao{
+  font-family: 'Titillium Web', sans-serif;
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  margin: 170px 30px;
+}
+
+.descricao h2{
+  font-size: 60px;
+  line-height: 125%;
+}
+
+.descricao h3{
+  margin-top: 30px;
+  font-size: 25px;
+  color: rgb(190, 190, 190);
+  line-height: 30px;
+}
+
+.btn{
+  width: 50%;
+  margin-top: 30px;
 }
