Tela Inicial e Responsividade

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap');
 
+html {
+  min-width: 350px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -13,18 +17,21 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+  font-size: inherit;
 }
-a:hover{
+
+a:hover {
   text-decoration: none;
   color: inherit;
 }
 
 .mainBody {
-  height: 100vh;
+  height: auto;
 }
 
 .insideBody {
-  padding: 80px 50px;
+  padding: 5% 5%;
+  height: 100%;
 }
 
 #inicio {
@@ -47,7 +54,8 @@ nav {
 }
 
 nav h2 {
-  margin-left: 20px;
+  margin-left: 4vw;
+  font-size: 2vw;
 }
 
 nav ul {
@@ -69,9 +77,11 @@ ul li:last-child {
   margin-right: 50px;
 }
 
-ul li a {
+ul li a h3 {
   text-decoration: none;
   color: whitesmoke;
+  font-size: 1.5vw;
+  align-items: center;
 }
 
 ul li::before {
@@ -111,78 +121,130 @@ ul li:hover::before {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .swiper-slide img {
-  display: block;
   width: 100%;
+  position: absolute;
   height: 100%;
   object-fit: cover;
-}
-
-#peças img {
+  z-index: -1;
   filter: blur(1px);
 }
 
 /*#endregion*/
 
-/*#region Responsive configs*/
-@media only screen and (max-width: 600px) {
-  #inicio {
-    background-position: 40% 0;
-  }
-  nav,
-  nav ul {
-    float: left;
-    position: relative;
-    align-items: center;
-    padding: 10px 0;
-    flex-direction: column;
-    margin: 0;
-  }
-
-  nav ul li {
-    width: 100vw;
-    box-shadow: 0 0 5px #000000;
-    background-color: rgb(0, 0, 0, 0.3);
-    padding: 10px 0;
-  }
-
-  nav h2 {
-    margin: 0;
-  }
-
-  ul li:last-child {
-    margin: 0;
-  }
-}
-/*#endregion*/
-
-.descricao{
+/*#region Inicio*/
+.descricao {
   font-family: 'Titillium Web', sans-serif;
   display: flex;
   flex-direction: column;
   width: 40%;
-  margin: 170px 30px;
+  margin: 4% 0%;
 }
 
-.descricao h2{
-  font-size: 60px;
+.descricao h2 {
+  font-size: 4vw;
   line-height: 125%;
 }
 
-.descricao h3{
-  margin-top: 30px;
-  font-size: 25px;
-  color: rgb(190, 190, 190);
-  line-height: 30px;
+.descricao h3 {
+  margin-top: 4%;
+  font-size: 1.5vw;
+  color: rgb(228, 228, 228);
+  line-height: 130%;
 }
 
-.btn{
-  width: 50%;
-  margin-top: 30px;
+.btn {
+  width: 80%;
+  margin-top: 4%;
+  font-size: 1.5vw;
 }
+
+/*#endregion*/
+
+/*#region Responsive configs*/
+@media only screen and (min-width: 601px) {
+  .nav-item {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .nav-item {
+    padding: 0;
+    margin: 0;
+  }
+
+  .dropdown-toggle {
+    display: flex;
+    flex-direction: column;
+    padding: 1px 10px;
+    margin: 0;
+    font-size: 35px;
+  }
+
+  .dropdown-toggle p {
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
+  }
+
+  #inicio {
+    background-position: 40% 0;
+    background-size: 100vh;
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 15px;
+  }
+
+  nav h2 {
+    font-size: 30px;
+    margin-left: 4vw;
+  }
+
+  nav ul {
+    display: none;
+  }
+
+  .descricao {
+    width: 40%;
+    margin: 10% 3%;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .mainBody {
+    height: auto;
+  }
+
+  .descricao {
+    width: 100%;
+    padding: 5% 0;
+    margin: 10% 0;
+  }
+
+  .descricao h2 {
+    font-size: 30px;
+  }
+
+  .descricao h3 {
+    font-size: 20px;
+  }
+
+  .btn {
+    font-size: 20px;
+    width: 90%;
+  }
+
+  nav h2 {
+    margin-left: 2vw;
+  }
+}
+/*#endregion*/
