--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap');
+/* #region Main */
 
 html {
-  min-width: 350px;
+  min-width: 360px;
 }
 
 * {
@@ -35,37 +35,14 @@ a:hover {
 }
 
 .titulo {
-  font-family: 'Titillium Web', sans-serif;
   margin-bottom: 30px;
   text-align: start;
 }
 
-.contato {
-  width: 100%;
-  height: 100vh;
-}
+/* #endregion */
 
-.form-control {
-  margin: 10px 0;
-}
-
-.contato .btn {
-  margin: 10px 0;
-  font-size: 15px;
-  width: 30vw;
-}
-
-#inicio {
-  background: url(./images/mainImg.jpg);
-  background-repeat: no-repeat;
-  background-size: 100vw;
-  object-fit: cover;
-  box-shadow: inset 0 0 10px #000000;
-}
-
-/*#region Nav Style*/
+/*#region Nav */
 nav {
-  font-family: 'Titillium Web', sans-serif;
   position: fixed;
   width: 100%;
   padding: 20px 10px;
@@ -85,7 +62,6 @@ nav ul {
 }
 
 ul li {
-  font-family: 'Titillium Web', sans-serif;
   text-align: center;
   cursor: pointer;
   position: relative;
@@ -125,7 +101,75 @@ ul li:hover::before {
 }
 /*#endregion*/
 
-/*#region Carousel*/
+/*#region Inicio*/
+
+#inicio {
+  background: url(./images/mainImg.jpg);
+  background-repeat: no-repeat;
+
+  background-size: 100%;
+  box-shadow: inset 0 0 10px #000000;
+}
+
+.descricaoInicio {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  margin: 4% 0%;
+}
+
+.descricaoInicio h2 {
+  font-size: 4vw;
+  line-height: 125%;
+}
+
+.descricaoInicio h3 {
+  margin-top: 4%;
+  font-size: 18px;
+  color: whitesmoke;
+  line-height: 130%;
+}
+
+.btn {
+  width: 80%;
+  margin-top: 4%;
+  font-size: 1.5vw;
+}
+
+/*#endregion*/
+
+/* #region Sobre */
+
+.sobreDescricao {
+  display: inline-block;
+  width: 45%;
+  padding-bottom: 30vh;
+}
+
+.sobreDescricao h2 {
+  background-color: whitesmoke;
+  padding: 10px;
+  color: #000000;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  line-height: 140%;
+}
+
+.sobreImg {
+  width: 50%;
+  border: whitesmoke 1px solid;
+  float: right;
+  border-radius: 5px;
+}
+
+.sobreDescricao .btn {
+  margin: 0;
+  font-size: 1.5vw;
+}
+
+/* #endregion */
+
+/*#region Principais Peças*/
 .swiper {
   width: 100%;
   height: 100vh;
@@ -157,14 +201,14 @@ ul li:hover::before {
 }
 
 .roupas {
-  background-color: rgba(177, 177, 177, 0.171);
+  background-color: rgba(0, 0, 0, 0.171);
   border-radius: 10px;
   padding: 2.5vw;
   width: 18vw;
+  box-shadow: inset 0 0 30px #e7e5e509;
 }
 
 .textoCarousel {
-  font-family: 'Titillium Web', sans-serif;
   width: 50%;
   margin-right: 9vw;
   margin-bottom: 9vw;
@@ -181,45 +225,15 @@ ul li:hover::before {
 }
 
 .textoCarousel .btn {
-  font-family: 'Titillium Web', sans-serif;
   width: 65%;
 }
 
 /*#endregion*/
 
-/*#region Inicio*/
-.descricao {
-  font-family: 'Titillium Web', sans-serif;
-  display: flex;
-  flex-direction: column;
-  width: 40%;
-  margin: 4% 0%;
-}
-
-.descricao h2 {
-  font-size: 4vw;
-  line-height: 125%;
-}
-
-.descricao h3 {
-  margin-top: 4%;
-  font-size: 15px;
-  color: whitesmoke;
-  line-height: 130%;
-}
-
-.btn {
-  width: 80%;
-  margin-top: 4%;
-  font-size: 1.5vw;
-}
-
-/*#endregion*/
-
+/*#region Dúvidas Frequentes*/
 .card {
   padding: 0;
   text-decoration: none;
-  font-family: 'Titillium Web', sans-serif;
   color: whitesmoke;
   background-color: rgba(245, 245, 245, 0);
   border: whitesmoke 1px solid;
@@ -231,13 +245,48 @@ ul li:hover::before {
   text-decoration: none;
   color: whitesmoke;
   margin: 0;
+  padding: 0;
+  word-wrap: break-word;
   text-align: start;
-  font-size: 90%;
+  font-size: 80%;
 }
 
 .card button:hover {
   color: whitesmoke;
 }
+
+/*#endregion*/
+
+/* #region Contato*/
+.contatoForms {
+  width: 100%;
+  height: 100%;
+}
+
+.form-control {
+  margin: 10px 0 0 0;
+}
+
+.contato .btn {
+  margin: 10px 0;
+  font-size: 15px;
+  width: 30vw;
+}
+
+/* #endregion */
+
+/* #region Footer */
+
+.footer {
+  width: 100%;
+  text-align: center;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
+/* #endregion */
 
 /*#region Responsive configs*/
 @media only screen and (min-width: 601px) {
@@ -284,6 +333,17 @@ ul li:hover::before {
 
   /*#endregion*/
 
+  .sobreDescricao .btn {
+    font-size: 20px;
+  }
+
+  .sobreDescricao {
+    width: 100%;
+  }
+  .sobreImg {
+    display: none;
+  }
+
   #inicio {
     background-position: 40% 0;
     background-size: 100vh;
@@ -291,7 +351,7 @@ ul li:hover::before {
 
   /*#region Carousel Responsive*/
 
-  .descricao {
+  .descricaoInicio {
     width: 40%;
     margin: 10% 3%;
   }
@@ -305,27 +365,29 @@ ul li:hover::before {
 }
 
 @media only screen and (max-width: 450px) {
+  /* Responsive body */
   .mainBody {
     height: auto;
   }
 
+  /* Responsive Nav */
   nav h2 {
     margin-left: 2vw;
   }
 
   /*#region Carousel Responsive*/
 
-  .descricao {
+  .descricaoInicio {
     width: 100%;
     padding: 5% 0;
     margin: 10% 0;
   }
 
-  .descricao h2 {
+  .descricaoInicio h2 {
     font-size: 30px;
   }
 
-  .descricao h3 {
+  .descricaoInicio h3 {
     font-size: 20px;
   }
 
