--- a/src/App.css
+++ b/src/App.css
@@ -258,7 +258,17 @@ ul li:hover::before {
 /*#endregion*/
 
 /* #region Contato*/
+#contato img {
+  width: 100%;
+  position: absolute;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  filter: blur(2px);
+}
+
 .contatoForms {
+  z-index: 1;
   width: 100%;
   height: 100%;
 }
